wrap "{Edit|Report bug on} this page" footer links
The recent increase in global font size caused these menu links to
mush into the copyright line.

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -594,6 +594,9 @@ footer .footmenu {
     float: right;
     margin: 0;
 }
+footer .footmenu.pagetools {
+    clear: right;
+}
 footer .footmenu.copyright {
     float: left;
 }
